# SideQuests

rpi-monitor/: config.py  docker_manager.py  framebuffer.py  log_viewer.py  metrics.py  monitor.py  network_info.py  plan.md  pyproject.toml  renderer.py  requirements.txt  rpi-monitor.service  state.py  touch_handler.py  widgets.py  zero_agent.py  zero_client.py
